--- a/templates/header.html
+++ b/templates/header.html
@@ -26,12 +26,12 @@
             <div class="navigation">
                 <ul>
                     <li><a href="index.html"><img src="images/icon-car.png" alt="" /></a></li>
-                    <li ><a href="index.html">Home</a></li>
-                    <li ><a href="about-us.html" onclick="handleOutboundLinkClicks">About Us</a></li>
-                    <li ><a href="our-car.html">Our Cars</a></li>
-                    <li ><a href="our-workshop.html">Service Centre</a></li>
-                    <li ><a href="our-promotion.html">Our Promotion</a></li>
-                    <li ><a href="contact-us.html">Contact Us</a></li>
+                    <li ><a href="@@path./index.html">Home</a></li>
+                    <li ><a href="@@path./about-us.html" onclick="handleOutboundLinkClicks">About Us</a></li>
+                    <li ><a href="@@path./our-car.html">Our Cars</a></li>
+                    <li ><a href="@@path./our-workshop.html">Service Centre</a></li>
+                    <li ><a href="@@path./our-promotion.html">Our Promotion</a></li>
+                    <li ><a href="@@path./contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="header-contact">Mon - Fri (10am - 7pm): <a href="tel: +65 6455 2535">+65 6455 2535</a>
