--- a/html/templates/car-menu.html
+++ b/html/templates/car-menu.html
@@ -45,11 +45,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/gla200.html">GLA200<br>
+                                <li><a href="@@path/gla200.html">GLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="../../all-cars/gla35.html">GLA35<br>
+                                <li><a href="@@path/gla35.html">GLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="../../all-cars/gla45-s.html">GLA45 S<br>
+                                <li><a href="@@path/gla45-s.html">GLA45 S<br>
                                         <span class="car-model-text">4-Matic Plus</span></a></li>
                             </ul>
                         </li>
@@ -65,9 +65,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/glb200-7-seater.html">GLB200 7-Seater<br>
+                                <li><a href="@@path/glb200-7-seater.html">GLB200 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium Plus</span></a></li>
-                                <li><a href="../../all-cars/glb35-7-seater.html">GLB35 7-Seater<br>
+                                <li><a href="@@path/glb35-7-seater.html">GLB35 7-Seater<br>
                                         <span class="car-model-text">4-Matic Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -83,11 +83,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/glc300-suv.html">GLC300<br>
+                                <li><a href="@@path/glc300-suv.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="../../all-cars/glc43-suv.html">GLC43<br>
+                                <li><a href="@@path/glc43-suv.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="../../all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="@@path/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -103,9 +103,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/gle450-7-seater.html">GLE450 7-Seater<br>
+                                <li><a href="@@path/gle450-7-seater.html">GLE450 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium</span></a></li>
-                                <li><a href="../../all-cars/gle53-7-seater.html">GLE53 7-Seater<br>
+                                <li><a href="@@path/gle53-7-seater.html">GLE53 7-Seater<br>
                                         <span class="car-model-text">4-Matic + Premium</span></a></li>
                             </ul>
                         </li>
@@ -135,15 +135,15 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/cla180.html">CLA180<br>
+                                <li><a href="@@path/cla180.html">CLA180<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="../../all-cars/cla200.html">CLA200<br>
+                                <li><a href="@@path/cla200.html">CLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="../../all-cars/cla250.html">CLA250<br>
+                                <li><a href="@@path/cla250.html">CLA250<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="../../all-cars/cla35.html">CLA35<br>
+                                <li><a href="@@path/cla35.html">CLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="../../all-cars/cla45-s.html">CLA45 S<br>
+                                <li><a href="@@path/cla45-s.html">CLA45 S<br>
                                         <span class="car-model-text">4-Matic + Plus</span></a></li>
                             </ul>
                         </li>
@@ -159,11 +159,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/glc300-coupe.html">GLC300<br>
+                                <li><a href="@@path/glc300-coupe.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="../../all-cars/glc43-coupe.html">GLC43<br>
+                                <li><a href="@@path/glc43-coupe.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="../../all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="@@path/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -192,13 +192,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/s450-2021.html"><span style="color:red;">NEW</span> S450
+                                <li><a href="@@path/s450-2021.html"><span style="color:red;">NEW</span> S450
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="../../all-cars/s500-2021.html"><span style="color:red;">NEW</span> S500
+                                <li><a href="@@path/s500-2021.html"><span style="color:red;">NEW</span> S500
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="../../all-cars/s500l.html">S500L<br>
+                                <li><a href="@@path/s500l.html">S500L<br>
                                         <span class="car-model-text">4-Matic AMG-Line Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -214,7 +214,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="../../all-cars/e200-2021.html"><span style="color:red;">NEW</span> E200
+                                <li><a href="@@path/e200-2021.html"><span style="color:red;">NEW</span> E200
                                         2021<br>
                                         <span class="car-model-text">AMG-Line Premium</span></a></li>
                             </ul>
@@ -248,10 +248,10 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
+                        <li><a href="@@path/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
                                     PDK
                                     3.0</span></span></a></li>
-                        <li><a href="../../all-cars/porsche-cayenne.html">Porsche Cayenne <br><span
+                        <li><a href="@@path/porsche-cayenne.html">Porsche Cayenne <br><span
                                     class="car-model-text">3.0</span></span></a></li>
                     </ul>
                 </li>
@@ -267,9 +267,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
+                        <li><a href="@@path/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
                                     4S</span></span></a></li>
-                        <li><a href="../../all-cars/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
+                        <li><a href="@@path/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
                                     class="car-model-text">S
                                     2.9</span></span></a></li>
                     </ul>
@@ -286,7 +286,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/porsche-panamera.html">Porsche Panamera<br><span
+                        <li><a href="@@path/porsche-panamera.html">Porsche Panamera<br><span
                                     class="car-model-text">4S PDK
                                     3.0</span></span></a></li>
                     </ul>
@@ -318,12 +318,12 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
+                        <li><a href="@@path/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
                                     M-Sport</span></span></a></li>
-                        <li><a href="../../all-cars/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
+                        <li><a href="@@path/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
                                     M-Sport
                                     Edition</span></span></a></li>
-                        <li><a href="../../all-cars/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
+                        <li><a href="@@path/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
                                     M-Sport</span></span></a></li>
                     </ul>
                 </li>
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
+                        <li><a href="@@path/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
                                     sDrive
                                     M-Sport</span></span></a></li>
                     </ul>
@@ -371,7 +371,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/toyota-alphard.html">Toyota Alphard <br><span
+                        <li><a href="@@path/toyota-alphard.html">Toyota Alphard <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
@@ -387,7 +387,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
+                        <li><a href="@@path/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
                                     Hybrid</span></span></a></li>
                     </ul>
                 </li>
@@ -418,9 +418,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../../all-cars/honda-fit.html">Honda Fit <br><span
+                        <li><a href="@@path/honda-fit.html">Honda Fit <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
-                        <li><a href="../../all-cars/honda-shuttle.html">Honda Shuttle <br><span
+                        <li><a href="@@path/honda-shuttle.html">Honda Shuttle <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
