--- a/html/templates/mobileMenu.html
+++ b/html/templates/mobileMenu.html
@@ -3,12 +3,12 @@
         <h2><img src="images/logo-icon.png" alt="" /></h2>
         <a href="#0" class="cd-close">Close</a>
         <ul class="cd-dropdown-content">
-            <li @@if (context.page==='home' ){ class='active' }><a href="index.html">Home</a></li>
-            <li @@if (context.page==='about' ){ class='active' }><a href="about-us.html">About us</a></li>
-            <li @@if (context.page==='car' ){ class='active' }><a href="our-car.html">Our Cars</a></li>
-            <li @@if (context.page==='service' ){ class='active' }><a href="our-workshop.html">Service Centre</a></li>
-            <li @@if (context.page==='prom' ){ class='active' }><a href="our-promotion.html">Our Promotions</a></li>
-            <li @@if (context.page==='contact' ){ class='active' }><a href="contact-us.html">Contact Us</a></li>
+            <li @@if (context.page==='home' ){ class='active' }><a href="@@path./index.html">Home</a></li>
+            <li @@if (context.page==='about' ){ class='active' }><a href="@@path./about-us.html">About us</a></li>
+            <li @@if (context.page==='car' ){ class='active' }><a href="@@path./our-car.html">Our Cars</a></li>
+            <li @@if (context.page==='service' ){ class='active' }><a href="@@path./our-workshop.html">Service Centre</a></li>
+            <li @@if (context.page==='prom' ){ class='active' }><a href="@@path./our-promotion.html">Our Promotions</a></li>
+            <li @@if (context.page==='contact' ){ class='active' }><a href="@@path./contact-us.html">Contact Us</a></li>
             <li><a href="contact-us.html" class="appointment-btn">Book An Appointment</a></li>
             <li>
                 <div class="menu-logo"><img src="images/logo-2.png" alt="" /></div>
