--- a/css/style.css
+++ b/css/style.css
@@ -9943,6 +9943,127 @@ button.complete .successMessage svg {
     .card .card-body ul li:after {
       top: 13px; } }
 
+.dropdown {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  transition: opacity 0.2s ease;
+  left: 0;
+  top: 65px; }
+  .dropdown.opened {
+    opacity: 1;
+    visibility: visible; }
+  .dropdown__wrapper {
+    width: 337px;
+    background-color: #ffffff;
+    padding: 70px 46px 49px 46px;
+    border-radius: 15px;
+    position: relative; }
+  .dropdown__wrapper--1 {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0; }
+  .dropdown__title {
+    margin-bottom: 30px;
+    font-family: "Corporate A";
+    font-size: 30px;
+    color: #898989; }
+  .dropdown__name {
+    position: absolute;
+    top: 31px;
+    font-size: 25px; }
+  .dropdown__close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    background: none;
+    border: none; }
+  .dropdown__close:before, .dropdown__close:after {
+    content: '';
+    position: absolute;
+    background-color: #000000;
+    width: 2px;
+    height: 100%; }
+  .dropdown__close:before {
+    transform: rotateZ(-45deg); }
+  .dropdown__close:after {
+    transform: rotateZ(45deg); }
+  .dropdown__list {
+    display: flex;
+    flex-direction: column; }
+  .dropdown__list .dropdown__item {
+    padding: 0; }
+  .dropdown__item:not(:first-child) {
+    margin-top: 20px; }
+  .dropdown__item.opened > .dropdown__link {
+    color: #ED2724; }
+  .dropdown__list .dropdown__link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: "Corporate A";
+    font-weight: 500;
+    font-size: 25px;
+    color: #000000; }
+  .dropdown__link:after {
+    content: '';
+    width: 8px;
+    height: 8px;
+    border: 2px solid #000000;
+    border-left: none;
+    border-top: none;
+    transform: rotateZ(-45deg); }
+  .dropdown__link:hover:after, .dropdown__item.opened > .dropdown__link:after {
+    border-color: #ED2724; }
+  .dropdown__item.opened > .dropdown--submenu {
+    opacity: 1;
+    visibility: visible; }
+  .dropdown--submenu {
+    top: 0;
+    left: calc(100% + 12px); }
+  .dropdown__wrapper--2 {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    padding: 40px;
+    text-align: center; }
+  .dropdown__book {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 52px;
+    background-color: #000000;
+    font-family: "Corporate A";
+    font-size: 22px;
+    color: #ffffff; }
+  .dropdown__icon {
+    width: 56px;
+    height: 39px;
+    margin-bottom: 25px; }
+  .dropdown__text {
+    font-family: "Corporate A";
+    font-size: 15px; }
+  .dropdown__text--2 {
+    margin-top: 23px; }
+
+.dropdown-background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  visibility: hidden;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 11;
+  transition: opacity 0.4s ease-in; }
+  .dropdown-background.opened {
+    opacity: 1;
+    visibility: visible; }
+
 /* Font */
 @font-face {
   font-family: 'Montserrat';
@@ -10667,6 +10788,8 @@ header {
       left: 0; }
       header .header-bottom.nav-fixed .logo-icon {
         display: block; }
+  header .header-bottom-wrapper {
+    position: relative; }
   header .navigation {
     width: auto;
     float: left;
@@ -10687,6 +10810,8 @@ header {
           text-decoration: none; }
       header .navigation ul li.active a {
         font-weight: bold; }
+    header .navigation__link {
+      cursor: pointer; }
   header .header-contact {
     width: auto;
     float: right;
