--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-top">
         <div class="container">
-            <div class="logo"><a href="index.html"><img src="images/logo-white.png" alt="" /></a></div>
+            <div class="logo"><a href="@@path./index.html"><img src="@@path./images/logo-white.png" alt="" /></a></div>
             <div class="header-top-right">
                 <div class="header-btn"><a href="contact-us.html" class="btn btn-primary">Book Appointment</a>
                 </div>
@@ -15,7 +15,7 @@
         <div class="mobile-car-btn">
             <button class="pushy-menu-btn"></button>
         </div>
-        <div class="mobile-logo"><a href="index.html"><img src="images/logo-icon.png" alt="" /></a></div>
+        <div class="mobile-logo"><a href="index.html"><img src="@@path./images/logo-icon.png" alt="" /></a></div>
         <div class="menu-icon">
             <button class="cd-dropdown-trigger"></button>
         </div>
@@ -31,7 +31,7 @@
                             onclick="handleOutboundLinkClicks">About Us</a></li>
                     <li @@if (context.page==='car' ){ class='active' } data-item>
 
-                        <a class="navigation__link" data-link>Our Cars</a>
+                        <a class="navigation__link pushy-menu-btn">Our Cars</a>
 
                         <div class="dropdown dropdown--main" data-dropdown>
                             <div class="dropdown__wrapper dropdown__wrapper--1">
