--- a/templates/head.html
+++ b/templates/head.html
@@ -38,7 +38,7 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#000">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="@@path./css/style.css">
 
     <!-- Facebook Pixel Code -->
     <script>
