--- a/scss/app.scss
+++ b/scss/app.scss
@@ -22,6 +22,8 @@
 /* Form */
 @import 'components/form';
 
+@import 'components/calculator';
+
 /* accordion */
 @import 'components/accordion'; 
 
@@ -35,4 +37,6 @@
 
 /* Layout */
 @import 'layout';  
+
+
 
