--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -461,6 +461,7 @@ header{
 			align-items: center;
 			padding: 0 15px;
 			height: 69px;
+			position: static;
 		}
 	
 		.header-bottom .navigation__list > li:first-child {
