--- a/html/templates/car-menu.html
+++ b/html/templates/car-menu.html
@@ -2,7 +2,7 @@
     <ul class="pushy-main-submenu">
         <li>
             <div class="car-menu-top">
-                <div class="car-image"><img src="images/icon-car.png" alt="" /></div>
+                <div class="car-image"><img src="@@imgPath./images/icon-car.png" alt="" /></div>
                 <div class="car-menu-title">Our Cars</div>
                 <div class="menu-close">
                     <button class="pushy-close"></button>
