--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -15,7 +15,7 @@
         <div class="mobile-car-btn">
             <button class="pushy-menu-btn"></button>
         </div>
-        <div class="mobile-logo"><a href="index.html"><img src="@@path./images/logo-icon.png" alt="" /></a></div>
+        <div class="mobile-logo"><a href="@@path./index.html"><img src="@@path./images/logo-icon.png" alt="" /></a></div>
         <div class="menu-icon">
             <button class="cd-dropdown-trigger" id="mobile-menu-open"></button>
         </div>
@@ -23,13 +23,13 @@
     <div class="header-bottom" id="mobile-menu">
         <div class="container header-bottom-wrapper">
             <div class="logo-icon">
-                <a href="index.html"><img src="images/logo-icon.png" alt="" /></a>
+                <a href="@@path./index.html"><img src="@@path./images/logo-icon.png" alt="" /></a>
                 <button class="cd-close" id="mobile-close">Close</button>
             </div>
             <div class="header-bottom-outer">
                 <div class="navigation">
                     <ul class="navigation__list" data-wrapper>
-                        <li><a href="index.html"><img src="images/icon-car.png" alt="" /></a></li>
+                        <li><a href="@@path./index.html"><img src="@@path./images/icon-car.png" alt="" /></a></li>
                         <li @@if (context.page==='home' ){ class='active' }><a href="@@path./index.html">Home</a></li>
                         <li @@if (context.page==='about' ){ class='active' }><a href="@@path./about-us.html"
                                 onclick="handleOutboundLinkClicks">About Us</a></li>
@@ -41,7 +41,7 @@
                             <div class="dropdown dropdown--main" data-dropdown>
                                 <div class="dropdown__wrapper dropdown__wrapper--1">
                                     <button class="dropdown__close" data-close></button>
-                                    <h3 class="dropdown__title">Our Service</h3>
+                                    <h3 class="dropdown__title">Our Services</h3>
                                     <ul class="dropdown__list" data-submenu-list>
                                         <li class="dropdown__item" data-submenu-item>
                                             <a href="@@path./our-workshop.html" class="dropdown__link">Service Centre</a>
@@ -89,7 +89,7 @@
 
 <div class="dropdown-background" id="dropdown-background"></div>
 
-<script src="./js/dropdown.js"></script>
+<script src="@@path./js/dropdown.js"></script>
 
 <script>
     new Dropdown();
