--- a/css/style.css
+++ b/css/style.css
@@ -10684,8 +10684,7 @@ ul {
   .box-info-row .box-column {
     padding-top: 45px; }
   .box-info-row .box-image {
-    width: 100%;
-    float: left; }
+    width: 100%; }
     .box-info-row .box-image img {
       width: 100%; }
   .box-info-row h3 {
