--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -114,7 +114,7 @@ ul{
 
 #middle{
 	width: 100%;
-	float: left;
+	//float: left;
 	
 	&.mobile-pad{
 		padding-top: 84px;
@@ -291,7 +291,7 @@ ul{
 
 .box-info-row{
 	width: 100%;
-	float: left;
+	//float: left;
 	padding: 0 0 70px;
 	
 	.box-column{
