--- a/css/style.css
+++ b/css/style.css
@@ -10992,8 +10992,9 @@ header {
   z-index: 100;
   position: fixed; }
   header .header-top-mobile {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
-    float: left;
     padding: 30px 15px;
     border-bottom: 1px solid #3e3e3e;
     z-index: 10;
