--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,21 +1,15 @@
 header{
-	display: flex;
-    flex-direction: column;
 	width: 100%;
-	//float: left;
+	float: left;
 	background: $black-color;
 	z-index: 100;
 	position: fixed;
 	
 	.header-top-mobile{
-		display: flex;
-    	justify-content: space-between;
 		width: 100%;
-		//float: left;
+		float: left;
 		padding: 30px 15px;
 		border-bottom: 1px solid #3e3e3e;
-		z-index: 10;
-		position: relative;
 		
 		.mobile-logo{
 			width: auto;
