--- a/css/style.css
+++ b/css/style.css
@@ -7867,11 +7867,19 @@ a.text-dark:hover, a.text-dark:focus {
     transition-property: transform;
     transition-property: transform,-webkit-transform; }
   html:not(.no-js) [data-aos=flip-left] {
-    -webkit-transform: perspective(2500px) rotateY(-100deg);
-    transform: perspective(2500px) rotateY(-100deg); }
+    /* -webkit-transform: perspective(2500px) rotateY(-100deg);
+    transform: perspective(2500px) rotateY(-100deg); */
+    transform: rotateY( 
+      92deg
+       ) rotateX( 
+      1deg
+       );
+   }
   html:not(.no-js) [data-aos=flip-left].aos-animate {
-    -webkit-transform: perspective(2500px) rotateY(0);
-    transform: perspective(2500px) rotateY(0); }
+    /* -webkit-transform: perspective(2500px) rotateY(0);
+    transform: perspective(2500px) rotateY(0); */
+    transform: rotateY( 0 ) rotateX( 0 );
+   }
   html:not(.no-js) [data-aos=flip-right] {
     -webkit-transform: perspective(2500px) rotateY(100deg);
     transform: perspective(2500px) rotateY(100deg); }
