--- a/css/style.css
+++ b/css/style.css
@@ -7867,19 +7867,11 @@ a.text-dark:hover, a.text-dark:focus {
     transition-property: transform;
     transition-property: transform,-webkit-transform; }
   html:not(.no-js) [data-aos=flip-left] {
-    /* -webkit-transform: perspective(2500px) rotateY(-100deg);
-    transform: perspective(2500px) rotateY(-100deg); */
-    transform: rotateY( 
-      92deg
-       ) rotateX( 
-      1deg
-       );
-   }
+    -webkit-transform: perspective(2500px) rotateY(-100deg);
+    transform: perspective(2500px) rotateY(-100deg); }
   html:not(.no-js) [data-aos=flip-left].aos-animate {
-    /* -webkit-transform: perspective(2500px) rotateY(0);
-    transform: perspective(2500px) rotateY(0); */
-    transform: rotateY( 0 ) rotateX( 0 );
-   }
+    -webkit-transform: perspective(2500px) rotateY(0);
+    transform: perspective(2500px) rotateY(0); }
   html:not(.no-js) [data-aos=flip-right] {
     -webkit-transform: perspective(2500px) rotateY(100deg);
     transform: perspective(2500px) rotateY(100deg); }
@@ -10688,8 +10680,7 @@ ul {
   width: 100%;
   padding: 0 0 70px; }
   .box-info-row .box-column {
-    padding-top: 45px;
-    transform: unset !important; }
+    padding-top: 45px; }
   .box-info-row .box-image {
     width: 100%; }
     .box-info-row .box-image img {
