--- a/css/style.css
+++ b/css/style.css
@@ -7867,29 +7867,29 @@ a.text-dark:hover, a.text-dark:focus {
     transition-property: transform;
     transition-property: transform,-webkit-transform; }
   html:not(.no-js) [data-aos=flip-left] {
-    -webkit-transform: perspective(2500px) rotateY(-100deg);
-    transform: perspective(2500px) rotateY(-100deg); }
+    -webkit-transform: rotateY(-100deg);
+    transform: rotateY(-100deg); }
   html:not(.no-js) [data-aos=flip-left].aos-animate {
-    -webkit-transform: perspective(2500px) rotateY(0);
-    transform: perspective(2500px) rotateY(0); }
+    -webkit-transform: rotateY(0);
+    transform: rotateY(0); }
   html:not(.no-js) [data-aos=flip-right] {
-    -webkit-transform: perspective(2500px) rotateY(100deg);
-    transform: perspective(2500px) rotateY(100deg); }
+    -webkit-transform: rotateY(100deg);
+    transform: rotateY(100deg); }
   html:not(.no-js) [data-aos=flip-right].aos-animate {
-    -webkit-transform: perspective(2500px) rotateY(0);
-    transform: perspective(2500px) rotateY(0); }
+    -webkit-transform: rotateY(0);
+    transform: rotateY(0); }
   html:not(.no-js) [data-aos=flip-up] {
-    -webkit-transform: perspective(2500px) rotateX(-100deg);
-    transform: perspective(2500px) rotateX(-100deg); }
+    -webkit-transform: rotateX(-100deg);
+    transform: rotateX(-100deg); }
   html:not(.no-js) [data-aos=flip-up].aos-animate {
-    -webkit-transform: perspective(2500px) rotateX(0);
-    transform: perspective(2500px) rotateX(0); }
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0); }
   html:not(.no-js) [data-aos=flip-down] {
-    -webkit-transform: perspective(2500px) rotateX(100deg);
-    transform: perspective(2500px) rotateX(100deg); }
+    -webkit-transform: rotateX(100deg);
+    transform: rotateX(100deg); }
   html:not(.no-js) [data-aos=flip-down].aos-animate {
-    -webkit-transform: perspective(2500px) rotateX(0);
-    transform: perspective(2500px) rotateX(0); } }
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0); } }
 
 /* Nice Select */
 .nice-select {
