--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -112,6 +112,13 @@ a, button, input{
 	}
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
 ul{
 	margin: 0;
 	padding: 0;
