--- a/css/style.css
+++ b/css/style.css
@@ -11359,7 +11359,21 @@ header {
     color: #000;
     font-size: 15px;
     padding: 23px 0 30px 0;
-    background: #F8F8F8; } }
+    background: #F8F8F8; }
+  header .submenu-arrow {
+    width: 100%;
+    display: flex;
+    align-items: center; }
+  header .submenu-arrow:after {
+    content: '';
+    width: 8px;
+    height: 8px;
+    border: 2px solid black;
+    border-top: none;
+    border-left: none;
+    transform: rotateZ(-45deg);
+    position: absolute;
+    right: 19px; } }
 
 @media screen and (min-width: 1200px) {
   header .navigation {
