--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -518,6 +518,24 @@ header{
 			padding: 23px 0 30px 0;
 			background: $gray-color;
 		  }
+
+		  .submenu-arrow {
+			width: 100%;
+			display: flex;
+			align-items: center;
+		}
+
+		.submenu-arrow:after {
+			content: '';
+			width: 8px;
+			height: 8px;
+			border: 2px solid black;
+			border-top: none;
+			border-left: none;
+			transform: rotateZ(-45deg);
+			position: absolute;
+			right: 19px;
+		}
 	}
 }
 
