--- a/css/style.css
+++ b/css/style.css
@@ -8860,7 +8860,23 @@ a.text-dark:hover, a.text-dark:focus {
 
 @media (min-width: 992px) {
   .pushy {
-    width: 30%; } }
+    width: 30%; }
+  .pushy-main-submenu::-webkit-scrollbar {
+    width: 4px; }
+  .pushy-main-submenu::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2); }
+  .pushy-main-submenu::-webkit-scrollbar-thumb {
+    background-color: darkgrey; }
+  .pushy-submenu {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    /* Hide scrollbar for IE, Edge and Firefox */ }
+    .pushy-submenu::-webkit-scrollbar {
+      display: none; }
+    .pushy-submenu {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */ } }
 
 /* Button */
 .btn-primary {
