--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -27,7 +27,7 @@
                 <a href="@@path./index.html"><img src="@@path./images/logo-icon.png" alt="" /></a>
                 <button class="cd-close" id="mobile-close">Close</button>
             </div>
-            <div class="header-bottom-outer">
+            <div class="header-bottom-outer" id="header-outer">
                 <div class="navigation">
                     <ul class="navigation__list" data-wrapper>
                         <li><a href="@@path./index.html"><img src="@@path./images/icon-car.png" alt="" /></a></li>
