--- a/css/style.css
+++ b/css/style.css
@@ -10302,7 +10302,8 @@ button.complete .successMessage svg {
     width: 100%;
     transition: left 0.25s ease-in-out;
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
     position: absolute;
     z-index: 6;
     top: 0;
